[package]
name = "kvs"
version = "0.1.0"
authors = ["Ankit Sinha <ankitbko@gmail.com>"]
edition = "2018"
description = "A kvs command line"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="2.33.1",features = ["yaml"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
